
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="25dp"
                android:text="@string/nombre"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/TarjetasAndorid"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:text="@string/numeroT"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/fecha"/>

            </LinearLayout>

        </LinearLayout>



    </ScrollView>



</androidx.cardview.widget.CardView>